# oil_price_uncertainty

./: README.md
Codes_CNT_2022_JAE/: IRFS_main_REA.mat  _Read_Me.txt  main_1.m  main_2_combine.m  main_3_figure_IRFs.m  main_4_table_IRFs.m  main_5_vdc.m  main_6_hd.m
Codes_CNT_2022_JAE/OPU/: OPU_events.fig  mat_to_ASCII.m  opu_baseline.mat  opu_baseline.txt  opu_np.mat  opu_robust0.mat  opu_robust12lags.mat
Codes_CNT_2022_JAE/OilUncertaintyConstruction_forPublication/: AR_Error.m  AR_Uncertainty.m  Baseline_Error.m  Baseline_Uncertainty.m  Baseline_Uncertainty_nocom.m  Baseline_Uncertainty_nocpi.m  Baseline_Uncertainty_noer.m  Baseline_Uncertainty_noinventory.m  Baseline_Uncertainty_nom1.m  Baseline_Uncertainty_noq.m  Baseline_Uncertainty_noy.m  Figure1.m  Figure2.m  Figure3.m  Figure4.m  IndexARNP.m  IndexComparison.m  IndexEvent.m  IndexIndividualConribution.m  NP_Error.m  NP_Uncertainty.m  (+45 more)
updated/: .env.example  .gitignore  README.md  pyproject.toml  run.py
updated/docs/: decisions.md
updated/opu/: __init__.py  config.py  data.py  factors.py  forecast_errors.py  identification.py  narrative.py  plotting.py  results.py  sv.py  svar.py  transforms.py  uncertainty.py
updated/reference/: OilMaster(RACPrice).xlsx  Oilsvymeans_baseline.txt  Oilyt_baseline.txt  README.md  ferrorsoil_baseline.mat  opu_baseline.mat
updated/scripts/: figures_and_csv_mar2026.py  run_opu_mar2026.py
updated/tests/: test_data.py  test_factors.py  test_forecast_errors.py  test_plotting.py  test_results.py  test_sv.py  test_svar.py  test_transforms.py  test_uncertainty.py
(+135 files in other folders)
